# visual_virtual_tether

./: CMakeLists.txt  README.md  package.xml
cfg/: MallardMixer.cfg  MallardToTwist.cfg  VirtualTether.cfg
launch/: virtual_tether.launch
nodes/: obj_to_cmdvel_mall.py  obj_to_cmdvel_mall_dog_walking.py  obj_to_cmdvel_mall_old.py  obj_to_twist_bluerov.py  obj_to_twist_bluerov_old.py  state_prediction.py  virtuaL_tether_mallard_mixer.py  virtual_tether.py  virtual_tether_MallARD.py  virtual_tether_MallARD_old.py  virtual_tether_dog_walking.py  virtual_tether_main.py  virtual_tether_old.py  virtual_tether_old_pre.py
params/: mallard_mixer.yaml
